--- a/slack-theme.css
+++ b/slack-theme.css
@@ -590,12 +590,12 @@ ts-mention.ts_tip:hover
 }
 
 .emoji-sizer {
-   /* outline for black-on-transparent emojis */
+   /* outline for black-on-transparent emojis 
    -webkit-filter: drop-shadow( 1px  0 0 var(--background-bright))
                    drop-shadow(-1px  0 0 var(--background-bright))
                    drop-shadow(-0  1px 0 var(--background-bright))
                    drop-shadow( 0 -1px 0 var(--background-bright));
-   margin: 0 !important;
+   margin: 0 !important;*/
 }
 
 .ts_icon.ts_icon_smile_o {
